--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "agenda": "file:",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
