--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
+    "framer-motion": "^12.6.3",
     "lucide-react": "^0.479.0",
     "next": "^15.2.4",
     "next-themes": "^0.4.6",
