--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@tanstack/react-query": "^5.72.1",
     "agenda": "file:",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -39,6 +41,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-imask": "^7.6.1",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
